# flutter_ui_example

./: README.md
calendar_todo/: README.md  pubspec.yaml
calendar_todo/android/app/: build.gradle
calendar_todo/android/app/src/debug/: AndroidManifest.xml
calendar_todo/android/app/src/main/: AndroidManifest.xml
calendar_todo/android/app/src/main/kotlin/com/example/calendar_todo/: MainActivity.kt
calendar_todo/android/app/src/profile/: AndroidManifest.xml
calendar_todo/lib/: day.dart  main.dart  month_view.dart  month_view_action_bar.dart
calendar_todo/linux/: CMakeLists.txt  my_application.cc
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/lib/paint/: example_paint.dart  my_painter.dart
example/lib/widgets/: example_table.dart  example_table_loop.dart  markdown.dart  pai_lie.dart  passwdor.dart  unique_serial.dart
go_ffi/app/: README.md  pubspec.yaml
go_ffi/app/android/app/: CMakeLists.txt  build.gradle
go_ffi/app/lib/: create_message.dart  main.dart
goffi/: README.md  pubspec.yaml
goffi/android/app/: CMakeLists.txt  build.gradle
goffi/android/app/libs/arm64-v8a/: libgo.h
goffi/android/app/libs/x86/: libgo.h
goffi/android/app/src/main/: AndroidManifest.xml
goffi/golib/: abuild.bash  build.bash  main.go  message.txt
goffi/lib/: main.dart
goffi/linux/: libgets.h
lib/paint/: draw.dart  text_paint.dart
lib/widgets/: example_table.dart
